--- a/src/sample/MellomSide.fxml
+++ b/src/sample/MellomSide.fxml
@@ -8,14 +8,10 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="294.0"
-            prefWidth="447.0" style="-fx-background-color: #F2F2F2;" xmlns="http://javafx.com/javafx/11.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MellomSide_Controller">
+            prefWidth="447.0" style="-fx-background-color: #F2F2F2;" stylesheets="@style.css"
+            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="sample.MellomSide_Controller">
     <children>
-        <ImageView fitHeight="306.0" fitWidth="461.0" layoutX="-7.0" layoutY="-6.0">
-            <image>
-                <Image url="@../img/background.jpg"/>
-            </image>
-        </ImageView>
         <Label layoutX="77.0" layoutY="147.0" prefHeight="33.0" prefWidth="294.0"
                text="Du har nå laget en bruker, vil du nå?">
             <font>
