--- a/src/sample/Mellom_side_Superbruker.fxml
+++ b/src/sample/Mellom_side_Superbruker.fxml
@@ -10,13 +10,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="610.0" prefWidth="562.0" style="-fx-background-color: #F2F2F2;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Mellom_side_SuperbrukerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="610.0" prefWidth="562.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Mellom_side_SuperbrukerController">
     <children>
-        <ImageView fitHeight="618.0" fitWidth="575.0" layoutX="-7.0" layoutY="-6.0">
-            <image>
-                <Image url="@../img/background.jpg" />
-            </image>
-        </ImageView>
         <Label fx:id="lblError" layoutX="130.0" layoutY="293.0" prefHeight="18.0" prefWidth="302.0">
             <font>
                 <Font name="Verdana" size="12.0" />
