--- a/src/sample/Standardbruker_FerdigByggetPc.fxml
+++ b/src/sample/Standardbruker_FerdigByggetPc.fxml
@@ -12,13 +12,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="531.0" prefWidth="1170.0" style="-fx-background-color: #F2F2F2;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Standardbruker_FerdigByggetPc_Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="531.0" prefWidth="1170.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Standardbruker_FerdigByggetPc_Controller">
     <children>
-        <ImageView fitHeight="540.0" fitWidth="694.0" layoutX="-9.0" layoutY="-8.0">
-            <image>
-                <Image url="@../img/background.jpg" />
-            </image>
-        </ImageView>
         <ImageView fx:id="img_Techmet" fitHeight="152.0" fitWidth="237.0" layoutX="184.0" layoutY="-30.0" AnchorPane.leftAnchor="184.0" AnchorPane.topAnchor="-30.0">
             <image>
                 <Image url="@../img/logo3.png" />
