--- a/src/sample/Viskomponenter_Superbruker.fxml
+++ b/src/sample/Viskomponenter_Superbruker.fxml
@@ -16,20 +16,15 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="591.0" prefWidth="934.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Viskomponenter_Superbruker_Controller">
+<AnchorPane prefHeight="591.0" prefWidth="934.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Viskomponenter_Superbruker_Controller">
     <children>
-        <ImageView fitHeight="598.0" fitWidth="944.0" layoutX="-6.0" layoutY="-7.0">
-            <image>
-                <Image url="@../img/background.jpg" />
-            </image>
-        </ImageView>
         <Separator layoutY="67.0" prefHeight="3.0" prefWidth="900.0" style="-fx-background-color: black;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1.2000000000000455" AnchorPane.topAnchor="67.0" />
         <ImageView fitHeight="149.0" fitWidth="200.0" layoutX="351.0" layoutY="-35.0" AnchorPane.leftAnchor="351.0" AnchorPane.rightAnchor="350.20000000000005" AnchorPane.topAnchor="-35.0">
             <image>
                 <Image url="@../img/logo3.png" />
             </image>
         </ImageView>
-        <AnchorPane fx:id="pane" layoutX="175.0" layoutY="75.0" prefHeight="452.0" prefWidth="542.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="175.0" AnchorPane.rightAnchor="184.0" AnchorPane.topAnchor="75.0" />
+        <AnchorPane fx:id="pane" layoutX="175.0" layoutY="75.0" prefHeight="452.0" prefWidth="542.0" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="175.0" AnchorPane.rightAnchor="184.0" AnchorPane.topAnchor="75.0" />
       <GridPane layoutX="-5.0" layoutY="110.0" prefHeight="445.0" prefWidth="186.0" AnchorPane.bottomAnchor="36.0" AnchorPane.leftAnchor="-5.0" AnchorPane.topAnchor="110.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -84,7 +79,7 @@
               </Button>
          </children>
       </GridPane>
-      <GridPane layoutX="181.0" layoutY="67.0" prefHeight="510.0" prefWidth="534.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="181.0" AnchorPane.rightAnchor="185.80000000000007" AnchorPane.topAnchor="67.0">
+      <GridPane layoutX="181.0" layoutY="67.0" prefHeight="510.0" prefWidth="534.0" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="181.0" AnchorPane.rightAnchor="185.80000000000007" AnchorPane.topAnchor="67.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -105,7 +100,7 @@
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
                 </TableView>
-            <HBox alignment="CENTER" prefHeight="82.0" prefWidth="534.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="SOMETIMES">
+            <HBox alignment="CENTER" prefHeight="82.0" prefWidth="534.0" style="-fx-background-color: transparent;" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="SOMETIMES">
                <children>
                       <Label fx:id="labelSøk" prefHeight="18.0" prefWidth="33.0" text="Søk">
                           <font>
