--- a/src/sample/Viskomponenter_Superbruker.fxml
+++ b/src/sample/Viskomponenter_Superbruker.fxml
@@ -16,126 +16,158 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="591.0" prefWidth="934.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Viskomponenter_Superbruker_Controller">
+<AnchorPane prefHeight="591.0" prefWidth="934.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Viskomponenter_Superbruker_Controller">
     <children>
-        <Separator layoutY="67.0" prefHeight="3.0" prefWidth="900.0" style="-fx-background-color: black;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1.2000000000000455" AnchorPane.topAnchor="67.0" />
-        <ImageView fitHeight="149.0" fitWidth="200.0" layoutX="351.0" layoutY="-35.0" AnchorPane.leftAnchor="351.0" AnchorPane.rightAnchor="350.20000000000005" AnchorPane.topAnchor="-35.0">
+        <Separator layoutY="67.0" prefHeight="3.0" prefWidth="900.0" style="-fx-background-color: black;"
+                   AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1.2000000000000455" AnchorPane.topAnchor="67.0"/>
+        <ImageView fitHeight="149.0" fitWidth="200.0" layoutX="351.0" layoutY="-35.0" AnchorPane.leftAnchor="351.0"
+                   AnchorPane.rightAnchor="350.20000000000005" AnchorPane.topAnchor="-35.0">
             <image>
-                <Image url="@../img/logo3.png" />
+                <Image url="@../img/logo3.png"/>
             </image>
         </ImageView>
-        <AnchorPane fx:id="pane" layoutX="175.0" layoutY="75.0" prefHeight="452.0" prefWidth="542.0" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="175.0" AnchorPane.rightAnchor="184.0" AnchorPane.topAnchor="75.0" />
-      <GridPane layoutX="-5.0" layoutY="110.0" prefHeight="445.0" prefWidth="186.0" AnchorPane.bottomAnchor="36.0" AnchorPane.leftAnchor="-5.0" AnchorPane.topAnchor="110.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-              <Button fx:id="btnRediger" mnemonicParsing="false" onAction="#On_Click_BtnRedigerKomponenter" prefHeight="46.0" prefWidth="162.0" style="-fx-background-color: #3daee4;" text="Rediger komponenter" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                  <font>
-                      <Font name="Verdana" size="13.0" />
-                  </font>
-              </Button>
-              <Button fx:id="btnLeggTil" mnemonicParsing="false" onAction="#On_Click_BtnLeggTilKomponenter" prefHeight="46.0" prefWidth="162.0" style="-fx-background-color: #3daee4;" text="Legg til komponenter" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-                  <font>
-                      <Font name="Verdana" size="13.0" />
-                  </font>
-              </Button>
-              <Button fx:id="btnFjern" mnemonicParsing="false" onAction="#On_Click_BtnFjernKomponenter" prefHeight="46.0" prefWidth="162.0" style="-fx-background-color: #3daee4;" text="Fjern komponenter" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
-                  <font>
-                      <Font name="Verdana" size="14.0" />
-                  </font>
-              </Button>
-         </children>
-      </GridPane>
-      <GridPane layoutX="706.0" layoutY="123.0" prefHeight="427.0" prefWidth="186.0" AnchorPane.bottomAnchor="41.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="123.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-              <Button fx:id="btnVisSpecs" mnemonicParsing="false" onAction="#On_Click_BtnVisSpesifikasjoner" prefHeight="55.0" prefWidth="162.0" style="-fx-background-color: #3daee4;" text="Vis en komponents&#10;spesifikasjoner" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                  <font>
-                      <Font name="Verdana" size="14.0" />
-                  </font>
-              </Button>
-              <Button fx:id="btnViskomponenter" mnemonicParsing="false" onAction="#On_Click_BtnVisKomponenter" prefHeight="46.0" prefWidth="162.0" style="-fx-background-color: #3daee4;" text="Vis alle komponenter" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-                  <font>
-                      <Font name="Verdana" size="13.0" />
-                  </font>
-              </Button>
-              <Button fx:id="btnTilbake" mnemonicParsing="false" onAction="#On_Click_BtnTilbake" prefHeight="46.0" prefWidth="162.0" style="-fx-background-color: black;" text="Tilbake" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
-                  <font>
-                      <Font name="Verdana" size="15.0" />
-                  </font>
-              </Button>
-         </children>
-      </GridPane>
-      <GridPane layoutX="181.0" layoutY="67.0" prefHeight="510.0" prefWidth="534.0" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="181.0" AnchorPane.rightAnchor="185.80000000000007" AnchorPane.topAnchor="67.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="178.4" minHeight="10.0" prefHeight="74.4" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="1000.0" minHeight="10.0" prefHeight="404.3999877929688" valignment="CENTER" vgrow="ALWAYS" />
-            <RowConstraints maxHeight="430.4000198364258" minHeight="10.0" prefHeight="50.80001220703127" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-                <TableView fx:id="tableView" prefHeight="343.0" prefWidth="534.0" style="-fx-font-family: Verdana;" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES">
+        <AnchorPane fx:id="pane" layoutX="175.0" layoutY="75.0" prefHeight="452.0" prefWidth="542.0"
+                    style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="65.0"
+                    AnchorPane.leftAnchor="175.0" AnchorPane.rightAnchor="184.0" AnchorPane.topAnchor="75.0"/>
+        <GridPane layoutX="-5.0" layoutY="110.0" prefHeight="445.0" prefWidth="186.0" AnchorPane.bottomAnchor="36.0"
+                  AnchorPane.leftAnchor="-5.0" AnchorPane.topAnchor="110.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <children>
+                <Button fx:id="btnRediger" mnemonicParsing="false" onAction="#On_Click_BtnRedigerKomponenter"
+                        prefHeight="46.0" prefWidth="162.0" style="-fx-background-color: #3daee4;"
+                        text="Rediger komponenter" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                    <font>
+                        <Font name="Verdana" size="13.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="btnLeggTil" mnemonicParsing="false" onAction="#On_Click_BtnLeggTilKomponenter"
+                        prefHeight="46.0" prefWidth="162.0" style="-fx-background-color: #3daee4;"
+                        text="Legg til komponenter" GridPane.halignment="CENTER" GridPane.rowIndex="1"
+                        GridPane.valignment="CENTER">
+                    <font>
+                        <Font name="Verdana" size="13.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="btnFjern" mnemonicParsing="false" onAction="#On_Click_BtnFjernKomponenter"
+                        prefHeight="46.0" prefWidth="162.0" style="-fx-background-color: #3daee4;"
+                        text="Fjern komponenter" GridPane.halignment="CENTER" GridPane.rowIndex="2"
+                        GridPane.valignment="CENTER">
+                    <font>
+                        <Font name="Verdana" size="14.0"/>
+                    </font>
+                </Button>
+            </children>
+        </GridPane>
+        <GridPane layoutX="706.0" layoutY="123.0" prefHeight="427.0" prefWidth="186.0" AnchorPane.bottomAnchor="41.0"
+                  AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="123.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <children>
+                <Button fx:id="btnVisSpecs" mnemonicParsing="false" onAction="#On_Click_BtnVisSpesifikasjoner"
+                        prefHeight="55.0" prefWidth="162.0" style="-fx-background-color: #3daee4;"
+                        text="Vis en komponents&#10;spesifikasjoner" textAlignment="CENTER" GridPane.halignment="CENTER"
+                        GridPane.valignment="CENTER">
+                    <font>
+                        <Font name="Verdana" size="14.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="btnViskomponenter" mnemonicParsing="false" onAction="#On_Click_BtnVisKomponenter"
+                        prefHeight="46.0" prefWidth="162.0" style="-fx-background-color: #3daee4;"
+                        text="Vis alle komponenter" GridPane.halignment="CENTER" GridPane.rowIndex="1"
+                        GridPane.valignment="CENTER">
+                    <font>
+                        <Font name="Verdana" size="13.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="btnTilbake" mnemonicParsing="false" onAction="#On_Click_BtnTilbake" prefHeight="46.0"
+                        prefWidth="162.0" style="-fx-background-color: black;" text="Tilbake" textFill="WHITE"
+                        GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                    <font>
+                        <Font name="Verdana" size="15.0"/>
+                    </font>
+                </Button>
+            </children>
+        </GridPane>
+        <GridPane layoutX="181.0" layoutY="67.0" prefHeight="510.0" prefWidth="534.0"
+                  style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="14.0"
+                  AnchorPane.leftAnchor="181.0" AnchorPane.rightAnchor="185.80000000000007" AnchorPane.topAnchor="67.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints maxHeight="178.4" minHeight="10.0" prefHeight="74.4" vgrow="SOMETIMES"/>
+                <RowConstraints maxHeight="1000.0" minHeight="10.0" prefHeight="404.3999877929688" valignment="CENTER"
+                                vgrow="ALWAYS"/>
+                <RowConstraints maxHeight="430.4000198364258" minHeight="10.0" prefHeight="50.80001220703127"
+                                vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <children>
+                <TableView fx:id="tableView" prefHeight="343.0" prefWidth="534.0" style="-fx-font-family: Verdana;"
+                           GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES">
                     <columns>
-                        <TableColumn fx:id="IDKolonne" maxWidth="2000.0" prefWidth="75.0" text="ID" />
-                        <TableColumn fx:id="navnKolonne" prefWidth="250.0" text="Produktnavn" />
-                        <TableColumn fx:id="typeKolonne" prefWidth="129.5999755859375" text="Type" />
-                        <TableColumn fx:id="prisKolonne" prefWidth="115.0" text="Pris" />
+                        <TableColumn fx:id="IDKolonne" maxWidth="2000.0" prefWidth="75.0" text="ID"/>
+                        <TableColumn fx:id="navnKolonne" prefWidth="250.0" text="Produktnavn"/>
+                        <TableColumn fx:id="typeKolonne" prefWidth="129.5999755859375" text="Type"/>
+                        <TableColumn fx:id="prisKolonne" prefWidth="115.0" text="Pris"/>
                     </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                    </columnResizePolicy>
                 </TableView>
-            <HBox alignment="CENTER" prefHeight="82.0" prefWidth="534.0" style="-fx-background-color: transparent;" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="SOMETIMES">
-               <children>
-                      <Label fx:id="labelSøk" prefHeight="18.0" prefWidth="33.0" text="Søk">
-                          <font>
-                              <Font name="Verdana" size="14.0" />
-                          </font>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                      </Label>
-                      <TextField fx:id="txtSøk" prefHeight="23.0" prefWidth="162.0" promptText="Skriv inn produktnavnet">
-                          <font>
-                              <Font name="Verdana" size="12.0" />
-                          </font>
-                     <HBox.margin>
-                        <Insets left="5.0" />
-                     </HBox.margin>
-                      </TextField>
-                      <TextField fx:id="txtSubmit" prefWidth="250.0" visible="false">
-                     <HBox.margin>
-                        <Insets left="20.0" />
-                     </HBox.margin>
-                  </TextField>
-                      <Button fx:id="btnSubmit" mnemonicParsing="false" text="Submit" visible="false">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </Button>
-               </children>
-            </HBox>
-              <Label fx:id="labelError" alignment="CENTER" prefHeight="22.0" prefWidth="534.0" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
-                  <font>
-                      <Font name="Verdana" size="12.0" />
-                  </font>
-              </Label>
-         </children>
-      </GridPane>
+                <HBox alignment="CENTER" prefHeight="82.0" prefWidth="534.0" style="-fx-background-color: transparent;"
+                      GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER"
+                      GridPane.vgrow="SOMETIMES">
+                    <children>
+                        <Label fx:id="labelSøk" prefHeight="18.0" prefWidth="33.0" text="Søk">
+                            <font>
+                                <Font name="Verdana" size="14.0"/>
+                            </font>
+                            <HBox.margin>
+                                <Insets/>
+                            </HBox.margin>
+                        </Label>
+                        <TextField fx:id="txtSøk" prefHeight="23.0" prefWidth="162.0"
+                                   promptText="Skriv inn produktnavnet">
+                            <font>
+                                <Font name="Verdana" size="12.0"/>
+                            </font>
+                            <HBox.margin>
+                                <Insets left="5.0"/>
+                            </HBox.margin>
+                        </TextField>
+                        <TextField fx:id="txtSubmit" prefWidth="250.0" visible="false">
+                            <HBox.margin>
+                                <Insets left="20.0"/>
+                            </HBox.margin>
+                        </TextField>
+                        <Button fx:id="btnSubmit" mnemonicParsing="false" text="Submit" visible="false">
+                            <HBox.margin>
+                                <Insets/>
+                            </HBox.margin>
+                        </Button>
+                    </children>
+                </HBox>
+                <Label fx:id="labelError" alignment="CENTER" prefHeight="22.0" prefWidth="534.0" textAlignment="CENTER"
+                       GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                    <font>
+                        <Font name="Verdana" size="12.0"/>
+                    </font>
+                </Label>
+            </children>
+        </GridPane>
     </children>
 </AnchorPane>
