--- a/src/sample/LoggInn.fxml
+++ b/src/sample/LoggInn.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="420.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoggInn_Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="815.0" prefWidth="420.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoggInn_Controller">
     <children>
       <GridPane layoutY="55.0" prefHeight="440.0" prefWidth="420.0" AnchorPane.bottomAnchor="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <columnConstraints>
@@ -57,32 +57,35 @@
                       <Font name="Verdana" size="11.0" />
                   </font>
               </Button>
-            <GridPane prefWidth="420.0" GridPane.rowIndex="3">
+            <GridPane prefHeight="106.0" prefWidth="398.0" GridPane.rowIndex="3">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="172.5999755859375" minWidth="10.0" prefWidth="71.79998016357422" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="286.2000198364258" minWidth="10.0" prefWidth="286.2000198364258" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="172.5999755859375" minWidth="10.0" prefWidth="92.80003280639649" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="380.000008392334" minWidth="10.0" prefWidth="327.1999671936035" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                    <ImageView fitHeight="45.0" fitWidth="42.0">
+                    <ImageView fitHeight="45.0" fitWidth="42.0" GridPane.halignment="RIGHT">
                         <image>
                             <Image url="@../img/bruker.png" />
                         </image>
                     </ImageView>
-                    <ImageView fitHeight="38.0" fitWidth="42.0" GridPane.rowIndex="1">
+                    <ImageView fitHeight="38.0" fitWidth="42.0" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                         <image>
                             <Image url="@../img/passord.png" />
                         </image>
                     </ImageView>
-                    <TextField fx:id="txtBrukernavn" maxWidth="250.0" promptText="Brukernavn" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                    <TextField fx:id="txtBrukernavn" maxWidth="220.0" prefHeight="32.0" prefWidth="238.0" promptText="Brukernavn" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                         <font>
                             <Font name="Verdana" size="16.0" />
                         </font>
+                     <GridPane.margin>
+                        <Insets left="-80.0" />
+                     </GridPane.margin>
                     </TextField>
-                    <TextField fx:id="txtPassord" maxWidth="250.0" promptText="Passord" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                    <TextField fx:id="txtPassord" maxWidth="220.0" promptText="Passord" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                         <cursor>
                             <Cursor fx:constant="DEFAULT" />
                         </cursor>
@@ -92,6 +95,9 @@
                         <font>
                             <Font name="Verdana" size="16.0" />
                         </font>
+                     <GridPane.margin>
+                        <Insets left="-80.0" />
+                     </GridPane.margin>
                     </TextField>
                </children>
             </GridPane>
