--- a/src/sample/LoggInn.fxml
+++ b/src/sample/LoggInn.fxml
@@ -14,9 +14,9 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="815.0" prefWidth="420.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoggInn_Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="420.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoggInn_Controller">
     <children>
-      <GridPane layoutY="55.0" prefHeight="440.0" prefWidth="420.0" AnchorPane.bottomAnchor="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <GridPane layoutY="55.0" prefHeight="514.0" prefWidth="420.0" AnchorPane.bottomAnchor="95.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -35,27 +35,45 @@
                   <image>
                       <Image url="@../img/logo2.png" />
                   </image>
+               <GridPane.margin>
+                  <Insets bottom="20.0" />
+               </GridPane.margin>
               </ImageView>
               <Label prefHeight="39.0" prefWidth="131.0" text="Logg inn" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                   <font>
                       <Font name="Verdana" size="30.0" />
                   </font>
+               <GridPane.margin>
+                  <Insets bottom="10.0" />
+               </GridPane.margin>
               </Label>
-              <Line endX="35.0" startX="-35.0" stroke="#3daee4" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="5.0" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+              <Line endX="35.0" startX="-35.0" stroke="#3daee4" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="5.0" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets bottom="10.0" />
+               </GridPane.margin></Line>
               <Button fx:id="btnLogginn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onClick_btn_LoggInn" prefHeight="38.0" prefWidth="112.0" style="-fx-border-color: black; -fx-background-color: #3daee4;" text="Logg inn" GridPane.halignment="CENTER" GridPane.rowIndex="4">
                   <font>
                       <Font name="Verdana" size="15.0" />
                   </font>
+               <GridPane.margin>
+                  <Insets top="20.0" />
+               </GridPane.margin>
               </Button>
               <Button fx:id="btnRegistrer" mnemonicParsing="false" onAction="#onClick_btn_RegistrerNyBruker" prefHeight="38.0" prefWidth="143.0" text="Registrer ny bruker" GridPane.halignment="CENTER" GridPane.rowIndex="5">
                   <font>
                       <Font name="Verdana" size="12.0" />
                   </font>
+               <GridPane.margin>
+                  <Insets top="20.0" />
+               </GridPane.margin>
               </Button>
               <Button fx:id="btnAvslutt" mnemonicParsing="false" onAction="#onClick_btn_Avslutt" prefHeight="22.0" prefWidth="66.0" style="-fx-background-color: black;" text="Avslutt" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="6">
                   <font>
                       <Font name="Verdana" size="11.0" />
                   </font>
+               <GridPane.margin>
+                  <Insets top="30.0" />
+               </GridPane.margin>
               </Button>
             <GridPane prefHeight="106.0" prefWidth="398.0" GridPane.rowIndex="3">
               <columnConstraints>
@@ -82,7 +100,7 @@
                             <Font name="Verdana" size="16.0" />
                         </font>
                      <GridPane.margin>
-                        <Insets left="-80.0" />
+                        <Insets left="-50.0" />
                      </GridPane.margin>
                     </TextField>
                     <TextField fx:id="txtPassord" maxWidth="220.0" promptText="Passord" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
@@ -96,14 +114,14 @@
                             <Font name="Verdana" size="16.0" />
                         </font>
                      <GridPane.margin>
-                        <Insets left="-80.0" />
+                        <Insets left="-50.0" />
                      </GridPane.margin>
                     </TextField>
                </children>
             </GridPane>
-              <Label fx:id="lblError" prefHeight="18.0" prefWidth="369.0" GridPane.rowIndex="7">
+              <Label fx:id="lblError" alignment="CENTER" prefHeight="33.0" prefWidth="427.0" GridPane.rowIndex="7">
                   <font>
-                      <Font name="Verdana" size="12.0" />
+                      <Font name="Verdana Bold" size="12.0" />
                   </font>
               </Label>
          </children>
