--- a/src/sample/MellomSide_Standardbruker.fxml
+++ b/src/sample/MellomSide_Standardbruker.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="557.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MellomSide_Standardbruker_Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="420.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MellomSide_Standardbruker_Controller">
     <children>
-        <GridPane layoutY="27.0" prefHeight="563.0" prefWidth="557.0" AnchorPane.bottomAnchor="159.79999999999995" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <GridPane layoutY="27.0" prefHeight="551.0" prefWidth="420.0" AnchorPane.bottomAnchor="71.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
@@ -27,12 +27,12 @@
             <children>
                 <ImageView fitHeight="149.0" fitWidth="200.0" GridPane.halignment="CENTER">
                     <image>
-                        <Image url="@../img/logo3.png" />
+                        <Image url="@../img/logo1.png" />
                     </image>
                 </ImageView>
-                <Label alignment="CENTER" prefHeight="34.0" prefWidth="562.0" text="Du har nå logget inn som en standardbruker, hvilken side vil du til nå?" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="82.0" prefWidth="557.0" text="Du har nå logget inn som en standardbruker, &#10;hvilken side vil du til nå?" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                     <font>
-                        <Font name="Verdana Bold" size="13.0" />
+                        <Font name="Verdana Bold" size="14.0" />
                     </font>
                 </Label>
                 <Button alignment="CENTER" mnemonicParsing="false" onAction="#click_btn_bygg_egen_pc" prefHeight="70.0" prefWidth="234.0" style="-fx-background-color: #3daee4;" text="Kjøp ferdig bygd pc " textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="2">
@@ -45,8 +45,8 @@
                         <Font name="Verdana" size="14.0" />
                     </font>
                 </Button>
-                <Button mnemonicParsing="false" onAction="#click_btn_Tilbake" prefHeight="26.0" prefWidth="88.0" style="-fx-background-color: black;" text="Logg ut" textFill="#dfdada" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
-              <Label fx:id="labelError" alignment="CENTER" prefHeight="18.0" prefWidth="566.0" GridPane.rowIndex="4">
+                <Button mnemonicParsing="false" onAction="#click_btn_Tilbake" prefHeight="26.0" prefWidth="88.0" style="-fx-background-color: black;" text="Logg ut" textFill="#dfdada" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+              <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" prefHeight="53.0" prefWidth="557.0" textAlignment="CENTER" GridPane.rowIndex="5">
                   <font>
                       <Font name="Verdana Bold" size="12.0" />
                   </font>
