--- a/src/sample/Mellom_side_Superbruker.fxml
+++ b/src/sample/Mellom_side_Superbruker.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="562.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Mellom_side_SuperbrukerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="420.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Mellom_side_SuperbrukerController">
     <children>
-        <GridPane layoutX="50.0" layoutY="56.0" prefHeight="599.0" prefWidth="462.0" AnchorPane.bottomAnchor="94.79999999999995" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0">
+        <GridPane layoutY="56.0" prefHeight="624.0" prefWidth="420.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
@@ -25,9 +25,9 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Label prefHeight="34.0" prefWidth="452.0" text="Du har nå logget inn som administrator, hvilken side vil du til nå?" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                <Label alignment="CENTER" prefHeight="80.0" prefWidth="420.0" text="Du har nå logget inn som administrator, &#10;hvilken side vil du til nå?" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                     <font>
-                        <Font name="Verdana Bold" size="12.0" />
+                        <Font name="Verdana Bold" size="16.0" />
                     </font>
                 </Label>
                 <Button mnemonicParsing="false" onAction="#On_Click_BtnVisKomponenter" prefHeight="58.0" prefWidth="238.0" style="-fx-background-color: #3daee4;" text="Systemets komponenter" GridPane.halignment="CENTER" GridPane.rowIndex="2">
@@ -50,7 +50,7 @@
                         <Image url="@../img/logo1.png" />
                     </image>
                 </ImageView>
-              <Label fx:id="lblError" alignment="CENTER" prefHeight="36.0" prefWidth="462.0" GridPane.rowIndex="5">
+              <Label fx:id="lblError" alignment="CENTER" contentDisplay="CENTER" prefHeight="80.0" prefWidth="420.0" textAlignment="CENTER" GridPane.rowIndex="5">
                   <font>
                       <Font name="Verdana Bold" size="12.0" />
                   </font>
